// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeCard should render the ThemeCard in Blue 1`] = `
<DocumentFragment>
  <div
    class="rounded bg-blue-white hover:bg-blue-lighter shadow-themecard-blue"
  >
    <div
      class="flex md:h-24"
    >
      <p
        class="px-4 font-bold  my-4 text-body-large"
      >
        <a
          class="block"
          href="/"
        >
          test
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ThemeCard should render the ThemeCard in Green 1`] = `
<DocumentFragment>
  <div
    class="rounded bg-green-lighter hover:bg-green-light shadow-themecard-green"
  >
    <div
      class="flex md:h-24"
    >
      <p
        class="px-4 font-bold  my-4 text-body-large"
      >
        <a
          class="block"
          href="/"
        >
          test
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;
